add a new snake game setup

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,8 @@
 
 
 .head{
-    background: linear-gradient(rgb(240, 124, 124), rgb(228, 228, 129));
+    background-image: url(th.jpeg);
+    background-size: cover;
     border: 2px solid purple;
     transform: scale(1.02);
     border-radius: 9px;
